# docsmith

./: .gitignore  CHANGELOG.md  README.md  example_with_image.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish_to_pypi.yaml
docs/design/: 001-image-block-checklist.md  001-image-block-support.md  001-image-block-technical-design.md  002-heading-block-checklist.md  002-heading-block-normalization.md  002-heading-block-technical-design.md
docs/requirements/: 001-image-block-support.md  002-heading-dict-form-bug.md  003-page-orientation-support.md
src/docsmith/: __init__.py  __main__.py  cli.py  normalize.py
tests/: test_normalize.py  test_render.py
